kubernetes/apps/media/pinchflat/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pinchflat
  namespace: media
spec:
  ports:
    - port: 8945
  selector:
    app: pinchflat
