kubernetes/apps/media/pinchflat/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pinchflat
  namespace: media
spec:
  parentRefs:
    - name: prod
      namespace: gateway
  hostnames:
    - pinchflat.local.elmurphy.com
  rules:
    - backendRefs:
        - name: pinchflat
          port: 8945
